--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<script data-main="js/app" src="js/libs/require.js"></script>
+</head>
+<body>
+
+</body>
+</html>
