--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  	<style>
+  		navmarg {
+  			margin: 0 50 0 50
+  		}
+  	</style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,19 +17,13 @@
 
   </head>
   <body>
-  	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
+  <div class="navmarg">
+  	  	<div class="container-fluid">
+    		<div margin="class="navbar-header">
+      		<a class="navbar-brand" href="#">Brand</a>
+    		</div>
+  		</div>
   </div>
-</nav>
 
 
   </body>
