--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<style>
   		navmarg {
-  			margin: 0 50 0 50
+  			margin: 0 -50px 0 -50px
   		}
   	</style>
     <meta charset="utf-8">
