--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
   </head>
   <body>
-  	<div class="container-fluid">
-    	<div margin="class="navbar-header">
-      		<a class="navbar-brand" href="#">Brand</a>
+  	<nav class="navbar navbar-default">
+  		<div class="container-fluid">
+    		<div class="navbar-header">
+      		<a class="navbar-brand">Brand</a>
     	</div>
-  	</div>
+
+	</nav>
 
 
   </body>
